<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Preference for the min vote average (rating). -->
    <EditTextPreference
        android:defaultValue="@string/pref_movie_min_vote_avg_default_value"
        android:key="@string/pref_movie_min_vote_avg_key"
        android:title="@string/pref_movie_min_vote_avg_title"
        android:inputType="numberDecimal"
        android:digits="0123456789."
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"/>

    <!-- Preference for the min vote count (min # of ratings). -->
    <EditTextPreference
        android:defaultValue="@string/pref_movie_min_vote_count_default_value"
        android:key="@string/pref_movie_min_vote_count_key"
        android:title="@string/pref_movie_min_vote_count_title"
        android:inputType="number"
        android:digits="0123456789"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"/>

    <!-- Preference for the min release date. -->
    <EditTextPreference
        android:defaultValue="@string/pref_movie_min_release_date_default_value"
        android:key="@string/pref_movie_min_release_date_key"
        android:title="@string/pref_movie_min_release_date_title"
        android:inputType="date"
        android:hint="YYYY-MM-DD"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"/>

    <!-- Preference for the max release date. -->
    <EditTextPreference
        android:defaultValue="@string/pref_movie_max_release_date_default_value"
        android:key="@string/pref_movie_max_release_date_key"
        android:title="@string/pref_movie_max_release_date_title"
        android:inputType="date"
        android:hint="YYYY-MM-DD"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"/>

    <!-- Preference for original language. -->
    <ListPreference
        android:defaultValue="@string/pref_movie_original_language_default_value"
        android:entries="@array/pref_movie_original_language_list_titles"
        android:entryValues="@array/pref_movie_original_language_list_values"
        android:key="@string/pref_movie_original_language_key"
        android:title="@string/pref_movie_original_language_title"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"/>

    <!-- Preference for the sort by method. -->
    <ListPreference
        android:defaultValue="@string/pref_movie_sort_by_default_value"
        android:entries="@array/pref_movie_sort_by_list_titles"
        android:entryValues="@array/pref_movie_sort_by_list_values"
        android:key="@string/pref_movie_sort_by_key"
        android:title="@string/pref_movie_sort_by_title"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"/>

    <!-- FIXME: Dynamic array insertion for 'entries'/'entryValues' -->
    <MultiSelectListPreference
        android:defaultValue="@array/pref_movie_genres_default_values"
        android:entries="@array/pref_movie_genres_list_titles"
        android:entryValues="@array/pref_movie_genres_list_values"
        android:key="@string/pref_movie_genres_key"
        android:title="@string/pref_movie_genres_title" />



</PreferenceScreen>
